# Shock-ALE-SW

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
shock_only_sw/: __init__.py  mesh.py  riemann.py  simulation.py
